--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pizza Shop</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" media="screen and (max-width: 1330px)" href="css/phone.css">
+    <link rel="stylesheet" href="https://jaimin78.github.io/PizzaShop-Template/css/style.css">
+    <link rel="stylesheet" media="screen and (max-width: 1330px)" href="https://jaimin78.github.io/PizzaShop-Template/css/phone.css">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200&display=swap" rel="stylesheet">
 </head>
@@ -16,7 +16,7 @@
     <header>
         <nav id="navbar">
             <div class="logo">
-                <img src="/img/logo.png" alt="Logo">
+                <img src="https://jaimin78.github.io/PizzaShop-Template/img/logo.png" alt="Logo">
             </div>
             <ul>
                 <li class="list"><a href="#">Home</a></li>
