--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!--  <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>Pizza Shop</title>
     <link rel="stylesheet" href="https://jaimin78.github.io/PizzaShop-Template/css/style.css">
     <link rel="stylesheet" media="screen and (max-width: 1330px)" href="https://jaimin78.github.io/PizzaShop-Template/css/phone.css">
@@ -45,7 +45,7 @@
     <section id="menu">
 
         <div class="item">
-            <img src="/img/Corn Cheese.jpg" alt="Corn Cheese">
+            <img src="https://jaimin78.github.io/PizzaShop-Template/img/Corn Cheese.jpg" alt="Corn Cheese">
             <h2 class="itemi">Corn Cheese</h2>
             <button class="btn">Order Now</button>
         </div>
